# Goalz Project Backend/routers/authRouter.js
@@ -14,8 +14,15 @@
 
 // login / create account route
     authRouter.get("/login/google", passport.authenticate("google", {
-        scope: ["profile"]
+        scope: ["profile", "email"]
     }));
+
+// handle the google redirect after verified 
+// this time passport is using query param code to get info from google and then firing 
+// it's callback function
+    authRouter.get("/google/redirect", passport.authenticate("google"), (req, res)=>{
+        res.send("You have been verified by google and are now back at the app");
+    })
 
 // logout 
     authRouter.get("/logout", executeLogout);
